# prompta

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bun.lockb  components.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  todo-room-for-improvement.md  tsconfig.json  tsconfig.server.json  vite.config.ts
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: FUNDING.yml
.github/workflows/: main.yml
scripts/: changelog.js  get-versions.ts  publish.sh  release.sh  upload.sh
src/: app.html  app.postcss  service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: capture.ts  constants.ts  db.ts  embeddings.ts  featureFlags.ts  llm.ts  markdown.ts  schema.sql  utils.test.ts  utils.ts  vecDb.ts
src/lib/components/: ActionsMenu.svelte  AutosizeTextarea.svelte  BlinkingCursor.svelte  ChatImageAttachment.svelte  ChatMessageControls.svelte  ChatMessageItem.svelte  ChatMessageList.svelte  CloseButton.svelte  CodeBlock.svelte  CopyButton.svelte  DevTooling.svelte  FullScreenError.svelte  IconAnthropic.svelte  IconArchiveIn.svelte  IconArchiveOut.svelte  IconBrain.svelte  IconBrainAiHybrid.svelte  IconCheckMark.svelte  IconChevronDown.svelte  IconChevronExpand.svelte  (+29 more)
src/routes/: +layout.svelte  +page.svelte
sync-server/: DBWrapper.ts  README.md  server.ts
tests/: index.spec.ts  initialize.setup.ts  providers.spec.ts
tests/test-helpers/: index.ts
(+42 files in other folders)
