[package]
  name = "app"
  version = "0.1.0"
  description = "A Tauri App"
  authors = ["you"]
  license = ""
  repository = ""
  edition = "2021"
  rust-version = "1.77.2"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
  name = "app_lib"
  crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
  tauri-build = { version = "2.0.1", features = [] }

[dependencies]
  serde_json = "1.0"
  serde = { version = "1.0", features = ["derive"] }
  log = "0.4"
  tauri = { version = "2.0.6", features = ["macos-private-api"] }
  tauri-plugin-log = "2.0.0-rc"
  tauri-plugin-window-state = "2.0.0"
  tauri-plugin-dialog = "2"
  tauri-plugin-fs = "2"
  tauri-plugin-clipboard-manager = "2"
  tauri-plugin-store = "2"
